--- a/angular-frontend/src/app/auth/auth.component.html
+++ b/angular-frontend/src/app/auth/auth.component.html
@@ -1,47 +1,73 @@
-
-<div class="d-flex flex-column flex-root" id="kt_app_root">
+<div class="container">
+  <div class="d-flex flex-column flex-root" id="kt_app_root">
     <!--begin::Page bg image-->
-    <style>body { background-image: url('assets/media/auth/bg10.jpeg'); } [data-theme="dark"] body { background-image: url('assets/media/auth/bg10-dark.jpeg'); }</style>
+    <style>
+      body {
+        background-image: url("assets/media/auth/bg10.jpeg");
+      }
+      [data-theme="dark"] body {
+        background-image: url("assets/media/auth/bg10-dark.jpeg");
+      }
+    </style>
     <!--end::Page bg image-->
     <!--begin::Authentication - Sign-in -->
     <div class="d-flex flex-column flex-lg-row flex-column-fluid">
-        <!--begin::Aside-->
-        <div class="d-flex flex-lg-row-fluid">
-            <!--begin::Content-->
-            <div class="d-flex flex-column flex-center pb-0 pb-lg-10 p-10 w-100">
-                <!--begin::Image-->
-                <img class="theme-light-show mx-auto mw-100 w-150px w-lg-300px mb-10 mb-lg-20" src="assets/media/auth/agency.png" alt="" />
-                <img class="theme-dark-show mx-auto mw-100 w-150px w-lg-300px mb-10 mb-lg-20" src="assets/media/auth/agency-dark.png" alt="" />
-                <!--end::Image-->
-                <!--begin::Title-->
-                <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast, Efficient and Productive</h1>
-                <!--end::Title-->
-                <!--begin::Text-->
-                <div class="text-gray-600 fs-base text-center fw-semibold">In this kind of post,
-                <a href="#" class="opacity-75-hover text-primary me-1">the blogger</a>introduces a person they’ve interviewed
-                <br />and provides some background information about
-                <a href="#" class="opacity-75-hover text-primary me-1">the interviewee</a>and their
-                <br />work following this is a transcript of the interview.</div>
-                <!--end::Text-->
-            </div>
-            <!--end::Content-->
+      <!--begin::Aside-->
+      <div class="d-flex flex-lg-row-fluid">
+        <!--begin::Content-->
+        <div class="d-flex flex-column flex-center pb-0 pb-lg-10 p-10 w-100">
+          <!--begin::Image-->
+          <img
+            class="theme-light-show mx-auto mw-100 w-150px w-lg-300px mb-10 mb-lg-20"
+            src="assets/media/auth/agency.png"
+            alt=""
+          />
+          <img
+            class="theme-dark-show mx-auto mw-100 w-150px w-lg-300px mb-10 mb-lg-20"
+            src="assets/media/auth/agency-dark.png"
+            alt=""
+          />
+          <!--end::Image-->
+          <!--begin::Title-->
+          <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">
+            Fast, Efficient and Productive
+          </h1>
+          <!--end::Title-->
+          <!--begin::Text-->
+          <div class="text-gray-600 fs-base text-center fw-semibold">
+            In this kind of post,
+            <a href="#" class="opacity-75-hover text-primary me-1"
+              >the blogger</a
+            >introduces a person they’ve interviewed <br />and provides some
+            background information about
+            <a href="#" class="opacity-75-hover text-primary me-1"
+              >the interviewee</a
+            >and their <br />work following this is a transcript of the
+            interview.
+          </div>
+          <!--end::Text-->
         </div>
-        <!--begin::Aside-->
-        <!--begin::Body-->
-        <div class="d-flex flex-column-fluid flex-lg-row-auto justify-content-center justify-content-lg-end p-12">
-            <!--begin::Wrapper-->
-            <div class="bg-body d-flex flex-center rounded-4 w-md-600px p-10">
-                <!--begin::Content-->
-                <div class="w-md-400px">
-                    <!--begin::Form-->
-                   <router-outlet></router-outlet>
-                    <!--end::Form-->
-                </div>
-                <!--end::Content-->
-            </div>
-            <!--end::Wrapper-->
+        <!--end::Content-->
+      </div>
+      <!--begin::Aside-->
+      <!--begin::Body-->
+      <div
+        class="d-flex flex-column-fluid flex-lg-row-auto justify-content-center justify-content-lg-end p-12"
+      >
+        <!--begin::Wrapper-->
+        <div class="bg-body d-flex flex-center rounded-4 w-md-600px p-10">
+          <!--begin::Content-->
+          <div class="w-md-400px">
+            <!--begin::Form-->
+            <router-outlet></router-outlet>
+            <!--end::Form-->
+          </div>
+          <!--end::Content-->
         </div>
-        <!--end::Body-->
+        <!--end::Wrapper-->
+      </div>
+      <!--end::Body-->
     </div>
     <!--end::Authentication - Sign-in-->
+  </div>
 </div>
