--- a/angular-frontend/src/app/Admin/entreprise/create-entreprise/create-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/create-entreprise/create-entreprise.component.html
@@ -15,15 +15,15 @@
                 <div class="form-group">
 
                     <!-- NOM -->
-                    <label for="nom">nom</label>
+                    <label for="nom">Nom Entreprise</label>
                     <!-- ngModel same name in ts -->
                     <input                     
                     [(ngModel)]="nom"
                     class="form-control"  
-                    type="text" name="nom" id="nom">
+                    type="text" name="nom" id="nom" required>
                    
                     <!-- ADDRESS -->
-                    <label for="address">address</label>
+                    <label for="address">Addresse</label>
 
                     <textarea         
                     rows="4"            
@@ -33,32 +33,32 @@
 
                     <!-- tel -->
 
-                    <label for="tel">tel</label>
+                    <label for="tel">Telephone</label>
                     <input                     
                     [(ngModel)]="tel"
                     class="form-control"  
                     type="text" name="tel" id="tel">
 
                     <!-- URL -->
-                    <label for="url">url</label>
+                    <label for="url">Site web</label>
                     <input                     
                     [(ngModel)]="url"
                     class="form-control"  
                     type="text" name="url" id="url">
 
                     <!-- email -->
-                    <label for="email">email</label>
+                    <label for="email">E-mail</label>
                     <input                     
                     [(ngModel)]="email"
                     class="form-control"  
-                    type="text" name="email" id="email">
+                    type="text" name="email" id="email" required>
                     
                 
                     <button [disabled]="isSubmitting"
                     (click)="addEntreprise()"
                     type="button"
-                    class="btn btn-outline-primary mt-3">
-                    Submit   </button>
+                    class="form-control btn btn-outline-primary mt-3">
+                    Ajouter    </button>
                  </div>
             </form>
         </div>
