--- a/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
 
                     <!-- NOM -->
-                    <label for="nom">nom</label>
+                    <label for="nom">Nom Entreprise</label>
                     <!-- ngModel same name in ts -->
                     <input                     
                     [(ngModel)]="entreprise.nom"
@@ -23,7 +23,7 @@
                     type="text" name="nom" id="nom">
                    
                     <!-- ADDRESS -->
-                    <label for="address">address</label>
+                    <label for="address">Addresse</label>
 
                     <textarea         
                     rows="4"            
@@ -33,21 +33,21 @@
 
                     <!-- tel -->
 
-                    <label for="tel">tel</label>
+                    <label for="tel">Telephone</label>
                     <input                     
                     [(ngModel)]="entreprise.tel"
                     class="form-control"  
                     type="text" name="tel" id="tel">
 
                     <!-- URL -->
-                    <label for="url">url</label>
+                    <label for="url">Site web</label>
                     <input                     
                     [(ngModel)]="entreprise.url"
                     class="form-control"  
                     type="text" name="url" id="url">
 
                     <!-- email -->
-                    <label for="email">email</label>
+                    <label for="email">E-mail</label>
                     <input                     
                     [(ngModel)]="entreprise.email"
                     class="form-control"  
