--- a/angular-frontend/src/app/Admin/entreprise/list-Entreprise/list-Entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/list-Entreprise/list-Entreprise.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title ">Liste des entreprises</h4>
                         <p class="card-category">  <a routerLink="/entreprise/create"
                             class="btn btn-outline-primary float-right"
-                            >Ajouter Item</a></p>
+                            >Ajouter Entreprise</a></p>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -17,19 +17,19 @@
                                         ID
                                     </th>
                                     <th>
-                                        nom
+                                        Nom
                                     </th>
                                     <th>
-                                        address
+                                        Addresse
                                     </th>
                                     <th>
-                                        tel
+                                        Telephone
                                     </th>
                                     <th>
-                                        url
+                                        Site Web
                                     </th>
                                     <th>
-                                        email
+                                        E-Mail
                                     </th>
                                     <th>
                                         Action
