--- a/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/edit-entreprise/edit-entreprise.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title ">Modifier une entreprise</h4>
                         <div class="card-header">
                             <!-- if we know the link we type normally, if like delete a list we use [] -->
-                            <a  class="btn btn-outline-info float-right" routerLink="/entreprise/get">Toutes les Entreprises</a>
+                            <a  class="btn btn-outline-info float-right" routerLink="/admin/entreprise/get">Toutes les Entreprises</a>
                         </div></div>
        
         <div class="card-body">
