--- a/angular-frontend/src/app/Admin/entreprise/one-entreprise/one-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/one-entreprise/one-entreprise.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <h2 class="text-center mt-5 mb-5">Item Detail</h2>
+    <h2 class="text-center mt-5 mb-5">Entreprise Detail</h2>
     <div class="card">
     <div class="card-header">
     <a class="btn btn-outline-info float-right"
-    routerLink="/entreprise/get">All Items</a>
+    routerLink="/admin/entreprise/get">Toutes les entreprises</a>
     </div>
     <div class="card-body">
     <b class="text-muted">Nom:</b>
