--- a/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/one-formation/one-formation.component.html
@@ -22,8 +22,8 @@
     <p>{{formation.dateDebut}}</p>
     <b class="text-muted">dateFin:</b>
     <p>{{formation.dateFin}}</p>
-    <b class="text-muted">formateur_id:</b>
-    <p>{{formation.formateur_id}}</p>
+    <b class="text-muted">formateur:</b>
+    <p>{{formation.formateur.name}}</p>
     <b class="text-muted">entreprise:</b>
     <p>{{formation.entreprise.nom}}</p>
     </div>
